clase 15 - display (block - inline-block)

--- a/invie/css/invie.css
+++ b/invie/css/invie.css
@@ -37,6 +37,14 @@ body{
 .menu{
 	font-size: 24px;
 	color white;
+	display: inline-block;
 }
 
+.menu li{
+	display: inline-block;
 
+}
+
+.logotipo {
+	display: inline-block;
+}
