--- a/invie/css/invie.css
+++ b/invie/css/invie.css
@@ -5,23 +5,30 @@ font-family: 'Allerta', sans-serif;
 
 body{
 	font-family: 'Allerta', sans-serif;
+	margin: 0;
 }
 
 .titulo {
 	font-family: 'Montserrat', sans-serif;
 	font-size: 70px;
+	margin-bottom: 0;
+	margin-top: 70px;
 }
 
 .title-a{
 	font-size: 24px;
+	margin-top: 0;
 }
 
 .title-b{
 	font-size: 50px;
+	margin-bottom: 20px;
 }
 
 .guitarras{
-	color: #1F313C;
+	color: #1F313C;	
+	width: 800px;
+	margin: auto;
 }
 
 .guitarras h2{
@@ -32,6 +39,13 @@ body{
 .portada {
 	background-image: url('../images/background.png');
 	color: white;
+	padding: 20px;
+	width: 800px;
+	margin: auto;
+}
+
+.portada button{
+	margin-bottom: 70px;
 }
 
 .menu{
@@ -42,9 +56,14 @@ body{
 
 .menu li{
 	display: inline-block;
-
+	margin-left: 30px;
 }
 
 .logotipo {
 	display: inline-block;
+}
+
+.header {	
+	width: 800px;
+	margin: auto;
 }
