--- a/invie/css/invie.css
+++ b/invie/css/invie.css
@@ -27,8 +27,6 @@ body{
 
 .guitarras{
 	color: #1F313C;	
-	width: 800px;
-	margin: auto;
 }
 
 .guitarras h2{
@@ -40,8 +38,6 @@ body{
 	background-image: url('../images/background.png');
 	color: white;
 	padding: 20px;
-	width: 800px;
-	margin: auto;
 }
 
 .portada button{
@@ -64,6 +60,9 @@ body{
 }
 
 .header {	
+}
+
+.contenedor{	
 	width: 800px;
 	margin: auto;
 }
