clase 22 - creando footer

--- a/invie/css/invie.css
+++ b/invie/css/invie.css
@@ -114,3 +114,20 @@ button{
 .contenedor-guitarra-b{
 	margin-left: 370px;
 }
+
+.footer{
+	background: #273b47;
+}
+
+.contacto img{
+	display: block;
+}
+
+.contacto strong{
+	display: block;
+}
+
+.contacto a{
+	color: white;
+	text-decoration: none;
+}
