--- a/invie/css/invie.css
+++ b/invie/css/invie.css
@@ -13,7 +13,7 @@ body{
 	margin: 0;
 }
 
-button{
+.button{
 	border-radius: 5px;
 	background: #fd324e;
 	color: white;
@@ -119,6 +119,13 @@ button{
 	background: #273b47;
 }
 
+.contacto{
+	display: flex;
+	width: 300px;
+	flex-wrap: wrap;
+	align-items: center;
+}
+
 .contacto img{
 	display: block;
 }
@@ -130,4 +137,42 @@ button{
 .contacto a{
 	color: white;
 	text-decoration: none;
+	margin: 10px 10px 10px 0;
+}
+
+.footer .contenedor{
+	display: flex;
+	justify-content: space-between;
+}
+
+.formulario {
+	display: flex;
+	width: 400px;
+	color: white;
+	padding: 50px 10px;
+}
+
+.col1,.col2{
+	display: flex;
+	flex-direction: column;
+}
+
+.col1{
+	margin-right: 15px;
+}
+
+.col2{
+	align-items: flex-start;
+}
+
+.intereses label{
+	font-size: 12px;
+}
+
+.formulario label,.sexo,intereses{
+	margin-bottom: 10px;
+}
+
+.sexo{
+	margin-top: 10px;
 }
