--- a/invie/css/invie.css
+++ b/invie/css/invie.css
@@ -196,3 +196,10 @@ table,td,th{
 	border: 1px solid #273b47;
 	border-collapse: collapse;
 }
+
+.menu li:before{
+	content: '∘';
+	font-size: 30px;
+	width: 20px;
+	color: blue;
+}
